--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,11 @@
 .social:last-child {
     margin-right: 0;
 }
+
+.auth-image {
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    float: left;
+    margin-right: 25px;
+}
