--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background: url("../images/skyscraper.png");
+}
+
 .social {
     width: 62px;
     height: 62px;
@@ -9,10 +17,72 @@
     margin-right: 0;
 }
 
+.work {
+    width: 274px;
+    overflow: auto;
+    position: relative;
+    float: left;
+    margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+    margin-right: 40px;
+}
+
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: .8;
+}
+
+.work h3 {
+    border-bottom: 0;
+    background: #4aaaa5;
+    /* background: #16E8C1; */
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    padding: 15px;
+    width: 100%;
+    line-height: 30px;
+    margin-bottom: 0;
+    font-weight: 300;
+}
+
 .auth-image {
     width: 200px;
     height: auto;
     margin-top: 10px;
     float: left;
     margin-right: 25px;
+}
+
+#main-section {
+    margin: 40px auto;
+    margin-right: 30px;
+    background: white;
+    padding-bottom: 20px;
+    border: 1px solid #ccc;
+}
+
+#sidebar {
+    margin: 40px auto;
+    background: white;
+    padding-bottom: 20px;
+    border: 1px solid #ccc;
+}
+
+h3 {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+}
+
+#footer {
+    line-height:40px;
+}
+
+#footer p {
+    text-align: center;
+    color: #ccc;
 }
