--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,48 +23,24 @@ body {
     margin-right: 0;
 }
 
-.work {
-    width: 274px;
-    overflow: auto;
-    position: relative;
-    float: left;
-    margin: 20px 0 25px;
-}
-
-.work:nth-child(even) {
-    margin-right: 40px;
-}
-
-.work img {
-    width: 100%;
-    border: 0 none;
-    opacity: .8;
-}
-
-.work h3 {
-    border-bottom: 0;
-    background: #4aaaa5;
-    /* background: #16E8C1; */
-    color: #fff;
-    text-align: center;
-    position: absolute;
-    bottom: 20px;
-    padding: 15px;
-    width: 100%;
-    line-height: 30px;
-    margin-bottom: 0;
-    font-weight: 300;
-}
-
-.auth-image {
-    width: 90%;    
-    display: block;
-    margin: 0;
-}
-
 .thumbnail {
     background: rgba(150, 226, 8, 0.992);
     border: 0px;
+}
+
+.thumbnail img {
+    width: 100%;
+}
+
+.thumbnail h3 {
+    background: rgba(34,34,34,.8);
+    color: grey;
+    text-align: center;
+    position: absolute;
+    bottom: 30px;
+    padding: 15px;
+    width: 90%;
+    line-height: 20px;
 }
 
 #main-section {
@@ -84,7 +60,7 @@ body {
 
 #panel-heading {
     background:#222222;
-    color: gray;
+    color: grey;
 }
 
 #footer {
