Made collapsable navabr

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,23 +6,6 @@ body {
     background: url("../images/skyscraper.png");
 }
 
-.connect {
-    width: 100%;
-    min-width: 300px;
-}
-
-.social {
-    width: 62px;
-    height: 62px;
-    margin-top: 0px;
-    margin-right: 5px;
-    float: left;
-}
-
-.social:last-child {
-    margin-right: 0;
-}
-
 .thumbnail {
     background: rgba(150, 226, 8, 0.992);
     border: 0px;
@@ -45,17 +28,15 @@ body {
 
 #main-section {
     margin: 40px auto;
+    /* margin-top: 40px; */
     background: rgba(150, 226, 8, 0.992);
-    padding-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(1, 7, 2);
 }
 
 #sidebar {
     margin: 40px auto;
-    margin-bottom: 100px;
     background: rgba(150, 226, 8, 0.992);
-    padding-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(1, 7, 2);
 }
 
 #panel-heading {
@@ -64,12 +45,13 @@ body {
 }
 
 #footer {
+    margin-top: 40px;
     line-height:40px;
 }
 
 #footer p {
     text-align: center;
-    color: #ccc;
+    color: grey;
 }
 
 .center-block {
