--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,15 +26,20 @@ body {
     line-height: 20px;
 }
 
+.navbar {
+    margin-bottom: 40px;
+}
+
 #main-section {
-    margin: 40px auto;
-    /* margin-top: 40px; */
+    margin: 0 auto;
+    margin-bottom: 40px;
     background: rgba(150, 226, 8, 0.992);
     border: 1px solid rgb(1, 7, 2);
 }
 
 #sidebar {
-    margin: 40px auto;
+    margin: 0 auto;
+    margin-bottom: 40px;
     background: rgba(150, 226, 8, 0.992);
     border: 1px solid rgb(1, 7, 2);
 }
