--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,29 +6,10 @@ body {
     background: url("../images/skyscraper.png");
 }
 
-.thumbnail {
-    background: rgba(150, 226, 8, 0.992);
-    border: 0px;
-}
-
-.thumbnail img {
-    width: 100%;
-}
-
-.thumbnail h3 {
-    background: rgba(34,34,34,.8);
-    color: grey;
-    text-align: center;
-    position: absolute;
-    bottom: 30px;
-    padding: 15px;
-    width: 90%;
-    line-height: 20px;
-}
-
 .navbar {
     margin-bottom: 40px;
     box-shadow: 5px 8px 18px #888888;
+    border-bottom: 1px solid rgba(33, 46, 8, 0.992);
 }
 
 #main-section {
@@ -57,6 +38,34 @@ body {
     text-align: left;
 }
 
+.center-block {
+    max-width: 80px;
+}
+
+#last-img {
+    margin-right: 15px;
+}
+
+.thumbnail {
+    background: rgba(150, 226, 8, 0.992);
+    border: 0px;
+}
+
+.thumbnail img {
+    width: 100%;
+}
+
+.thumbnail h3 {
+    background: rgba(34,34,34,.8);
+    color: grey;
+    text-align: center;
+    position: absolute;
+    bottom: 30px;
+    padding: 15px;
+    width: 90%;
+    line-height: 20px;
+}
+
 #footer {
     margin-top: 40px;
     line-height:40px;
@@ -65,12 +74,4 @@ body {
 #footer p {
     text-align: center;
     color: grey;
-}
-
-.center-block {
-    max-width: 80px;
-}
-
-#last-img {
-    margin-right: 15px;
 }
