--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .navbar {
     margin-bottom: 40px;
-    box-shadow: 5px 8px 18px #888888;
+    box-shadow: 0px 3px 6px #888888;
     border-bottom: 1px solid rgba(33, 46, 8, 0.992);
 }
 
@@ -17,7 +17,7 @@ body {
     margin-bottom: 40px;
     background: rgba(150, 226, 8, 0.992);
     border: 1px solid rgb(1, 7, 2);
-    box-shadow: 5px 8px 18px #888888;
+    box-shadow: 3px 5px 18px #888888;
 }
 
 #sidebar {
@@ -25,12 +25,16 @@ body {
     margin-bottom: 40px;
     background: rgba(150, 226, 8, 0.992);
     border: 1px solid rgb(1, 7, 2);
-    box-shadow: 5px 8px 18px #888888;
+    box-shadow: 3px 5px 18px #888888;
+    border-right: 0px;
 }
 
 #panel-heading {
     background:#222222;
     color: grey;
+    border-bottom: 0px;
+    box-shadow: 1px 2px 2px #110707;
+
 }
 
 #panel-heading h3 {
@@ -53,6 +57,7 @@ body {
 
 .thumbnail img {
     width: 100%;
+    box-shadow: 1px 2px 9px #110707;
 }
 
 .thumbnail h3 {
