--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ body {
 .thumbnail {
     background: rgba(150, 226, 8, 0.992);
     border: 0px;
+    position: relative;
 }
 
 .thumbnail img {
@@ -65,11 +66,20 @@ body {
     color: grey;
     text-align: center;
     position: absolute;
-    bottom: 30px;
+    bottom: 20px;
     padding: 15px;
-    width: 90%;
-    line-height: 20px;
+    width: 98%;
+    line-height: 50%;
+    position: absolute;
+    font-size: 3vw;
+    
 }
+
+@media screen and (min-width: 818px) {
+    .thumbnail h3 {
+       font-size: 24px;
+    }
+  }
 
 #footer {
     margin-top: 40px;
