--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@ body {
     background: url("../images/skyscraper.png");
 }
 
+.container {
+    /* margin-left: 40px;
+    margin-right: 40px; */
+    margin: 0 auto;
+}
+
 .navbar {
     margin-bottom: 40px;
     box-shadow: 0px 3px 6px #888888;
@@ -34,7 +40,6 @@ body {
     color: grey;
     border-bottom: 0px;
     box-shadow: 1px 2px 2px #110707;
-
 }
 
 #panel-heading h3 {
